--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ li {
   position: fixed;
   left: -80%;
 }
+/* /end * hamburger menu */
 .section-title {
   display: inline-block;
   font-size: 2rem;
@@ -391,13 +392,30 @@ form #wrapper-button {
 }
 
 /* footer --------- */
-.footer {
+/* .footer {
   height: 60px;
   background-color: #383e45;
   color: #fff;
   text-align: center;
   font-size: 0.875rem;
   line-height: 60px;
+} */
+.footer-inner {
+  display: flex;
+  flex-direction: column;
+  height: 60px;
+  background-color: #383e45;
+  font-size: 0.875rem;
+  color: #fff;
+  text-align: center;
+  line-height: 10px;
+}
+.footer-inner p {
+  margin: 10px auto 7px;
+}
+.footer-inner a {
+  text-decoration: none;
+  color: #fff;
 }
 
 /* SP ------------- */
@@ -414,7 +432,7 @@ form #wrapper-button {
   #menu-btn-check {
     display: none;
   }
-  /* hamburger */
+  /* end hamburger */
 
   .site-title {
     width: auto;
@@ -554,7 +572,7 @@ form #wrapper-button {
     padding-bottom: 30px;
   }
 
-  /* humburger */
+  /* hamburger */
 
   .menu-btn {
     position: fixed;
@@ -637,4 +655,19 @@ form #wrapper-button {
   #menu-btn-check:checked ~ .menu-content {
     left: 0; /*メニューを画面内へ*/
   }
+  /* hamburger menu */
+}
+
+/* privacy policy  */
+
+.site-title a {
+  color: white;
+  /* text-decoration: none; */
+}
+#header-pp {
+  max-width: 100%;
+  height: 100px;
+  color: #fff;
+  background-color: #081215;
+  font: "Helvetica Neue";
 }
